Add code that shows three buttons for player input, plays rounds until either player or computer has five points, shows victory or loss message, and replaces buttons with a Play Again button, which refreshes the page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="scores">
+        <span class="result"> </span>
+        Player Score: <span id="player-score"></span>
+        Computer Score: <span id="computer-score"></span>
+    </div>
+
+    <div id="container">
+        <button class="scissors">Scissors</button>
+        <button class="paper">Paper</button>
+        <button class="rock">Rock</button>
+    </div>
+    <div id="reset-button-container"></div>
     <script src="scissors.js"></script>
 </body>
 </html>
